Moved all the tasks to a new package and aded Services. Tasks can now register services that other can go get.

--- a/Specify/src/edu/ku/brc/specify/core/package.html
+++ b/Specify/src/edu/ku/brc/specify/core/package.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-This package contains all the 'core' components functionality components for the application and the navigation panel.<br>
+This package contains the <i>core</i> portion of of the app that enables taks to reqister themselves and provide services for the rest of the application, as well as,
+ the navigation panel.<br>
 A main functionality component is called a Task and must implement the Taskable interface.
 <br><br>
 
