Added Services Moved Tasks to registry file Updated the hibernate.cfg.xml file for all the new database files

--- a/Specify/src/edu/ku/brc/specify/ui/forms/persist/package.html
+++ b/Specify/src/edu/ku/brc/specify/ui/forms/persist/package.html
@@ -6,5 +6,8 @@ This means any form can reference and other form in the system with the View Set
 <br><br>Note that SubView can reference Forms outside of it's own View Set, but Alternative Forms can only reference forms within its View Set. 
 This could easily be changed if necessary.<br><br>n this case a "form" is really the definition of a form. The form's object hierarchy
 is used to creates the forms using Swing UI objects. 
+<br>
+<br>
+Really need to change this all over to using a factory approach and eliminate the "types" then anything can be place inside a form.
 </body>
 </html>
