--- a/Specify/src/edu/ku/brc/specify/prefs/package.html
+++ b/Specify/src/edu/ku/brc/specify/prefs/package.html
@@ -1,6 +1,8 @@
 <html>
 <body>
-This package is responsible for all preferences reading/writing and processing. <br>
-Preferences are stored in an XML file and are made available to the user via an application dialog.
+This package contains the UI necessary for display the preferences (java.util.prefs.Preferences).
+The preferences are defined as being in different groupings, sometimes referred to as "Sections".<br>
+At the moment the preference panel consists of a model dialog with a single toolbar containing clickable
+icons for each available preference panel. Each panel can handle any number of preferences.
 </body>
 </html>
