--- a/Specify/src/edu/ku/brc/specify/plugins/package.html
+++ b/Specify/src/edu/ku/brc/specify/plugins/package.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-This package contains classes need to define and install plugins
+This package contains classes need to define and install plugins.
+@since 7/7/07
 </body>
 </html>
