refactored and move dbsupport

--- a/Specify/src/edu/ku/brc/dbsupport/package.html
+++ b/Specify/src/edu/ku/brc/dbsupport/package.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 This package is a set of classes that helps the code connection between the database and application.
-<span style="font-weight: bold;color:red;">(This documentation needs to be improved)</span>
+<br><span style="font-weight: bold;color:red;">(This documentation needs to be improved)</span>
 </body>
 </html>
