--- a/trunk/Specify/src/edu/ku/brc/specify/plugins/package.html
+++ b/trunk/Specify/src/edu/ku/brc/specify/plugins/package.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-This package contains classes need to define and install plugins.
-@since 7/7/07
+User-developer defined plugins
 </body>
 </html>
