full text indexing for help
bogus, annoying (i apologize) help content to test full text searching.

help glossary

help favorites

test help images

stuff to add help context sensitivity by focussed control when desired. (not working)

--- a/Specify/help/SpecifyHelp/Data_Entry/Data_Entry.html
+++ b/Specify/help/SpecifyHelp/Data_Entry/Data_Entry.html
@@ -2,13 +2,17 @@
 <HTML>
 <HEAD>
 <TITLE>
-You used the help menu.
+Data Entry
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1>Data Entry</H1>
 
-Insert Help Here.
+Will never be fun. 
+
+However with Specify 6 it should be easier. 
+
+Maybe not so fast, but it will be safe and effective.
 
 <p>
 <b>Remember:</b>
