--- a/Specify/help/SpecifyHelp/Export/Export.html
+++ b/Specify/help/SpecifyHelp/Export/Export.html
@@ -2,13 +2,17 @@
 <HTML>
 <HEAD>
 <TITLE>
-LOGIN OR DIE!
+Export
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1>Export</H1>
 
-Insert Help Here.
+GoogleEarth.
+<p>Dude.</p> 
+<p>This stuff will blow your mind.</p>
+
+<p><img src="../images/earthmoon.jpg" x-maintain-ratio="TRUE" style="width:400px; height:489px;" width="400" height="489" border="0" class="hcp4"></p>
 
 <p>
 <b>Remember:</b>
