--- a/Specify/help/SpecifyHelp/Express_Search/Express_Search.html
+++ b/Specify/help/SpecifyHelp/Express_Search/Express_Search.html
@@ -2,13 +2,15 @@
 <HTML>
 <HEAD>
 <TITLE>
-LOGIN OR DIE!
+Express Search
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1>Express Search</H1>
 
-Insert Help Here.
+Blazing, blinding, face-shredding speed at the tips of your fingers.
+
+<p><img src="../images/donald-campbell-bluebird-cn-7.jpg" x-maintain-ratio="TRUE" style="width:350px; height:258px;"width="350" height="258" border="0" class="hcp4">></p>
 
 <p>
 <b>Remember:</b>
