--- a/Specify/help/SpecifyHelp/Reports/Reports.html
+++ b/Specify/help/SpecifyHelp/Reports/Reports.html
@@ -2,13 +2,13 @@
 <HTML>
 <HEAD>
 <TITLE>
-LOGIN OR DIE!
+Reports
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1>Reports</H1>
 
-Insert Help Here.
+You can create and run all kinds of cool reports with Specify.
 
 <p>
 <b>Remember:</b>
