--- a/Specify/help/SpecifyHelp/Search/Search.html
+++ b/Specify/help/SpecifyHelp/Search/Search.html
@@ -2,13 +2,13 @@
 <HTML>
 <HEAD>
 <TITLE>
-LOGIN OR DIE!
+Search
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1>Search</H1>
 
-Insert Help Here.
+You can probably find just about anything.
 
 <p>
 <b>Remember:</b>
