--- a/Specify/help/SpecifyHelp/Startup/Startup.html
+++ b/Specify/help/SpecifyHelp/Startup/Startup.html
@@ -2,13 +2,13 @@
 <HTML>
 <HEAD>
 <TITLE>
-You used the help menu.
+Getting Started
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1>Getting Started</H1>
 
-Insert Help Here.
+Specify does so much for so many. Here's how:
 
 <p>
 <b>Remember:</b>
