--- a/Specify/help/SpecifyHelp/Statistics/Statistics.html
+++ b/Specify/help/SpecifyHelp/Statistics/Statistics.html
@@ -2,13 +2,13 @@
 <HTML>
 <HEAD>
 <TITLE>
-LOGIN OR DIE!
+Statistics
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1>Statistics</H1>
 
-Insert Help Here.
+Let Specify reveal surprising secrets about the data you use every day!
 
 <p>
 <b>Remember:</b>
