--- a/Specify/help/SpecifyHelp/Workbench/WorkbenchImportFormats.html
+++ b/Specify/help/SpecifyHelp/Workbench/WorkbenchImportFormats.html
@@ -2,13 +2,13 @@
 <HTML>
 <HEAD>
 <TITLE>
-You used the help menu.
+OnRamp Import Formats
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>Workbench Import Formats</H1>
+<H1>OnRamp Import Formats</H1>
 
-Insert Help Here.
+Specify imports data in a vast variety of csv and xls formats.
 
 <p>
 <b>Remember:</b>
