--- a/trunk/Specify/help/SpecifyHelp/Data_Entry/Data_Entry.html
+++ b/trunk/Specify/help/SpecifyHelp/Data_Entry/Data_Entry.html
@@ -2,13 +2,17 @@
 <HTML>
 <HEAD>
 <TITLE>
-You used the help menu.
+Data Entry
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1>Data Entry</H1>
 
-Insert Help Here.
+Will never be fun. 
+
+However with Specify 6 it should be easier. 
+
+Maybe not so fast, but it will be safe and effective.
 
 <p>
 <b>Remember:</b>
