--- a/trunk/Specify/help/SpecifyHelp/Interactions/Interactions.html
+++ b/trunk/Specify/help/SpecifyHelp/Interactions/Interactions.html
@@ -2,13 +2,13 @@
 <HTML>
 <HEAD>
 <TITLE>
-LOGIN OR DIE!
+Interactions
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1>Interactions</H1>
 
-Insert Help Here.
+Specify smoothly handles interactions of all kinds. 
 
 <p>
 <b>Remember:</b>
