--- a/trunk/Specify/help/SpecifyHelp/Labels/Labels.html
+++ b/trunk/Specify/help/SpecifyHelp/Labels/Labels.html
@@ -2,13 +2,13 @@
 <HTML>
 <HEAD>
 <TITLE>
-LOGIN OR DIE!
+Labels
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1>Labels</H1>
 
-Insert Help Here.
+Making labels is fast, fun and easy with Specify.
 
 <p>
 <b>Remember:</b>
