--- a/trunk/Specify/help/SpecifyHelp/Workbench/Workbench.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/Workbench.html
@@ -2,13 +2,19 @@
 <HTML>
 <HEAD>
 <TITLE>
-You used the help menu.
+OnRamp
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>Workbench</H1>
+<H1>OnRamp</H1>
 
-Insert Help Here.
+Merge into the fast lane of the information super-highway to hell.
+
+Specify 6 will take you there.
+
+Enjoy the ride!
+
+<p><img src="../images/[5595]Logon_Preview.jpg" x-maintain-ratio="TRUE" style="width:420px; height:371px;" width="420" height="371" border="0" class="hcp4"></p>
 
 <p>
 <b>Remember:</b>
