--- a/trunk/Specify/help/SpecifyHelp/Workbench/WorkbenchImportCvs.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/WorkbenchImportCvs.html
@@ -2,13 +2,15 @@
 <HTML>
 <HEAD>
 <TITLE>
-You used the help menu.
+CVS Import to OnRamp
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>CVS Import</H1>
+<H1>CVS Import to OnRamp</H1>
 
-Insert Help Here.
+Importing CSV (comma-separated values) data is a breeze with Specify!
+
+No sweat!
 
 <p>
 <b>Remember:</b>
