--- a/trunk/Specify/help/SpecifyHelp/Workbench/WorkbenchImportData.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/WorkbenchImportData.html
@@ -2,13 +2,18 @@
 <HTML>
 <HEAD>
 <TITLE>
-You used the help menu.
+Importing OnRamp Data
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>Importing Data</H1>
+<H1>Importing OnRamp Data</H1>
 
-Insert Help Here.
+This stuff is so easy it's a cinch!
+<p>
+You will be amazed and relieved!
+</p>
+
+<p><img src="../images/vacuum.gif" x-maintain-ratio="TRUE" style="width:250px; height:214px;" width="250" height="214" border="0" class="hcp4"></p>
 
 <p>
 <b>Remember:</b>
