--- a/trunk/Specify/help/SpecifyHelp/Workbench/ImportCvs.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ImportCvs.html
@@ -6,18 +6,11 @@ CVS Import to OnRamp
 </TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>CVS Import to OnRamp</H1>
+<H1>CVS Import</H1>
 
 Importing CSV (comma-separated values) data is a breeze with Specify!
 
-No sweat!
-
 <p>
-<b>Remember:</b>
-<ul>
-<li>Work Hard.
-<li>Don't Complain.
-</ul>
 
 </body>
 </HTML>
