--- a/trunk/Specify/help/SpecifyHelp/Workbench/Overview.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/Overview.html
@@ -1,9 +1,112 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<html>
-  <head>
-  <title>Overview</title>
-  <link href="../../main.css" rel="stylesheet" type="text/css" media="screen"></link>
-  </head>
-  <body>
-  <h1>OnRamp Overview</h1></body>
+<head>
+<link rel="StyleSheet" href="../../main.css" rel="stylesheet" type="text/css" media="screen">
+<title>WorkBench</title>
+
+</head>
+
+<body>
+<!--
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+-->
+<H2>Welcome to WorkBench </H2>
+<hr>
+<p>The Specify 6 WorkBench is a friendly and innovative software tool for capturing and editing collections data. It can create sets of specimen and lot information through keystroke data entry and through batch data import. </p>
+<p> The WorkBench&#39;s versatility makes it perfect for use in the field or for rapidly entering a backlog of collections data. Using the WorkBench to enter data ensures that it will not only import seamlessly into Specify 6 but also prepares it for any data processing needs that may occur in the future. </p>
+<p>The WorkBench  also imports existing MS-Excel or CSV data files and converts the data into versions that are recognized by Specify 6. To achieve the conversion, the WorkBench creates relationships between the existing data Columns and the Specify 6 fields.  Once these relationships are defined, or mapped, data can be entered, changed and manipulated using the features of the WorkBench and Specify 6.</p>
+<p>The WorkBench is a highly intuitive and streamlined tool for working with data. New users require little training and potential errors are caught before data is uploaded into Specify 6. </p>
+<p>Data inside the  WorkBench can be presented in reports, edited using a Georeferencing converter, Georeferenced in  BioGeomancer and mapped in Google Earth!<br>
+</p>
+<h3><u>Introducing DataSets</u></h3>
+<p>Data is entered, edited, organized and stored in a  DataSet. </p>
+<p>The DataSet can display and function as a Grid, resembling a spreadsheet, or a Form, resembling a database. </p>
+<p>When data is imported, the DataSet will display the  imported column names rather than the Specify field names, as these are  more familiar. </p>
+<p>The WorkBench also has the capability of linking one image to each record within a DataSet. The linked images display in an image window that can be toggled on or off. This is particularly useful when entering data from a scanned catalog card. <br>
+</p>
+<h3><u>Using WorkBench </u></h3>
+<p>Before using WorkBench, it is important to understand its components and how they interact with each other. As the diagram below shows, the two major components of WorkBench are the Sidebar and  Workspace. </p>
+<p><img src="../images/openscreen1.png" alt="open screen"></p>
+<br>
+<h3><u>Sidebar</u></h3>
+<p> The Sidebar contains Data and Action items:</p>
+<p><img src="../images/openscreen3.png" alt="Sidebar sub components"></p>
+<p>Action items are used to manipate the Data items. There are four ways to initiate an action:</p>
+<ol>
+  <li>Click   an Action item, then choose a Data item </li>
+  <li>Click   a Data Item, then choose an Action item </li>
+  <li>Drag an Action item and drop it onto a Data item</li>
+  <li>Drag a Data item and drop it onto an Action item  </li>
+</ol>
+<br>
+<h3><u><a name="DragAndDrop"></a>Drag and Drop </u></h3>
+<p> Many Action items can be drag and dropped onto Data items, or vice versa. Action items that can be drag and dropped will produce a green box on a mouse-over. Action items that can not be drag and dropped will produce a blue box. </p>
+<p>Selecting an  item and  dragging it downward on the Sidebar will produce a green box around all the  items that it can be dropped onto. </p>
+<br>
+<h3><u>SideBar Items </u></h3>
+<p>Sidebar items are further categorized by what they are; i.e. Actions, Reports, Templates and DataSets. <br>
+</p>
+<p>An explanation of each of these individual items is below: </p>
+<table width="100%" border="1">
+  <tr>
+    <td><span class="style1">Import Data </span></td>
+    <td>Click this to import data from a spreadsheet or cvs file.</td>
+  </tr>
+  <tr>
+    <td><span class="style1">Import Card Images </span></td>
+    <td>Click this to enter data from  images. </td>
+  </tr>
+  
+  <tr>
+    <td><span class="style1">New DataSet </span></td>
+    <td>Click this to enter new data that will be defined by an existing Template.</td>
+  </tr>
+  <tr>
+    <td><span class="style1">Export Data </span></td>
+    <td>Click this to create an MS-Excel document from a DataSet.</td>
+  </tr>
+  <tr>
+    <td>Export Template </td>
+    <td>Click this to create a predefined MS-Excel document from an existing Template. </td>
+  </tr>
+  <tr>
+    <td><span class="style1">DataSet Summary</span></td>
+    <td>Displays a summary of occurrence counts for one field within the DataSet. This is particularly useful when editing data to validate the input. </td>
+  </tr>
+  <tr>
+    <td><span class="style1">Chart</span></td>
+    <td>Charts one field within a  DataSet.</td>
+  </tr>
+  <tr>
+    <td><span class="style1">Top 10 </span></td>
+    <td>Displays the top 10 data records of one field within the DataSet in a pie chart. </td>
+  </tr>
+  
+  <tr>
+    <td><span class="style1">DataSets </span></td>
+    <td><p>Provides a list of the available DataSets. Click the name to open the DataSet in the Workspace. </p>
+        <p>Note: When a DataSet is in use it becomes disabled on the Sidebar. This ensures that the DataSet can not change while it is in use. </p></td>
+  </tr>
+</table>
+<p>&nbsp;</p>
+<h3><u>Trash Can </u></h3>
+<p>Delete any Template or DataSet by dragging it to the trash can. </p>
+<p>Note: Deleting a Template will also delete all the DataSets defined by the Template.</p>
+<br>
+<h3><u>WorkSpace </u></h3>
+<p>DataSets and Reports open  in the Workspace. The components of the Workspace are listed below: </p>
+<h3><img src="../images/openscreen2.png" alt="screen2"></h3>
+<br>
+<h3><u>Tabs </u></h3>
+<p>WorkBench allows many DataSets to be open at the same time, but only one can display in the Workspace. WorkBench creates a tab for each open DataSet, allowing users to select which will be displayed. </p>
+<br>
+<h3><u>Close Workspace</u></h3>
+<p>Select the 'x' to close an open DataSet or Report. </p>
+<br>
+<h3><u>Getting Started </u></h3>
+<p>How to begin depends on the state of the data. If the data exists as an MS-Excel or CSV file then proceed to '<a href="ImportData.html">Import Data</a>'. If the data exists on written notes  proceed to '<a href="NewDataSet.html">New DataSet </a>'. If the data exists on scanned cards or field notes it may be useful to read the help section '<a href="ImportImages.html">Import  Images</a>' before proceeding to '<a href="NewDataSet.html">New DataSet </a>'. </p>
+
+</body>
 </html>
